@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release nutchgora - Current Development
 
+* NUTCH-1295 nutchgora restlet dependencies failing when remote repos is down (ferdy)
+
 * NUTCH-965 Skip parsing for truncated documents (alexis, lewismc, ferdy)
 
 * NUTCH-1287 Upgrade to hsqldb 2.2.8 (ferdy)
